--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,17 +4,11 @@
 
 main:
   - name: Home
-    url: /#top
+    url: /
     weight: 10
-  - name: Features
-    url: /#features
+  - name: About
+    url: /about/
+    weight: 15
+  - name: Contact
+    url: /contact/
     weight: 20
-  - name: Solutions
-    url: /#solutions
-    weight: 30
-  - name: Resources
-    weight: 40
-    hasChildren: true
-  - parent: Resources
-    name: Blog
-    url: blog/
